fix white space word wrap

--- a/apps/app-client-angular/src/app/modules/scrum-toolbox/components/crud-backlog-sprint/crud-backlog-sprint.component.scss
+++ b/apps/app-client-angular/src/app/modules/scrum-toolbox/components/crud-backlog-sprint/crud-backlog-sprint.component.scss
@@ -121,3 +121,7 @@
     }
   }
 }
+
+th {
+  white-space: nowrap;
+}
